--- a/KMEANS/mainwindow.ui
+++ b/KMEANS/mainwindow.ui
@@ -45,7 +45,7 @@ QPushButton::hover{
       <x>10</x>
       <y>10</y>
       <width>591</width>
-      <height>91</height>
+      <height>121</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -174,15 +174,46 @@ QPushButton::hover{
        </item>
       </layout>
      </item>
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout_3">
+       <item>
+        <spacer name="horizontalSpacer">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <widget class="QPushButton" name="salvarCSVPushButton">
+         <property name="text">
+          <string>Salvar resultado em CSV</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="salvarComoImagemPushButton">
+         <property name="text">
+          <string>Salvar gráfico como Imagem</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
     </layout>
    </widget>
    <widget class="QGroupBox" name="groupBox_2">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>110</y>
+      <y>140</y>
       <width>591</width>
-      <height>341</height>
+      <height>311</height>
      </rect>
     </property>
     <property name="title">
